@@ -47,7 +47,7 @@ zbx_sysinfo_proc_t;
  * Purpose: frees process data structure                                      *
  *                                                                            *
  ******************************************************************************/
-void	zbx_sysinfo_proc_free(zbx_sysinfo_proc_t *proc)
+static void	zbx_sysinfo_proc_free(zbx_sysinfo_proc_t *proc)
 {
 	zbx_free(proc->name);
 	zbx_free(proc->name_arg0);
