@@ -4,6 +4,7 @@ New features:
 ...G...PS. [ZBX-13730] replaced pcreposix library with pcre, lowered backtracking limit, fixed libevent build issues (yurii)
 
 Bug fixes:
+...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
 ..F....... [ZBX-14631] fixed typo in string: ouf, not out (vasilijs)
 ........S. [ZBX-14410] fixed use of uninitialized variable (MVekslers)
 ..F....... [ZBX-14433] fixed several problems in displaying of X axis on the graphs (Sasha)
@@ -1310,6 +1311,7 @@ Changes for 3.0.21rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
 ........S. [ZBX-14410] fixed use of uninitialized variable (MVekslers)
 ..F....... [ZBX-14433] fixed several problems in displaying of X axis on the graphs (Sasha)
 
